--- a/assests/style.css
+++ b/assests/style.css
@@ -3,6 +3,14 @@
     background-color: green;
     width: 50%;
     padding: 10px 40px 40px 40px;
+    position: fixed;
     
     
+}
+#timer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    color: yellow;
 }
