if answer is wrong deducts 10 sec also fixed timer

--- a/assests/style.css
+++ b/assests/style.css
@@ -14,3 +14,12 @@
     font-size: 20px;
     color: yellow;
 }
+body {
+    background-color: black;
+}
+#status {
+    font-size: 45px;
+    background: -webkit-linear-gradient(red,yellow);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
